ex-2.02/manifests/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-app
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: shared-todo-image
        persistentVolumeClaim:
          claimName: todo-app-claim
      containers:
      - image: aldahdouh/todo-front:latest
        imagePullPolicy: Always
        name: todo-front
      - image: aldahdouh/todo-back:latest
        imagePullPolicy: Always
        name: todo-back
        volumeMounts:
        - mountPath: /app/images
          name: shared-todo-image
