ex-2.02/manifests/todo-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-todo-back-app-srv
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
