ex-2.02/manifests/todo-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-todo-front-app-srv
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 80
